--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -13,7 +13,7 @@ android {
         enabled = true
     }
 //    hugo {
-//        enabled true
+//        enabled false
 //    }
     defaultConfig {
         applicationId "com.drprog.moodstory"
@@ -34,44 +34,42 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
-        maven {
-            url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
-        }
+        maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local' }
+        maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
-        classpath "io.realm:realm-gradle-plugin:0.88.0-SNAPSHOT"
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1' //log method by annotation @DebugLog
+        classpath "io.realm:realm-gradle-plugin:0.91.0-SNAPSHOT"
         classpath 'me.tatarka:gradle-retrolambda:3.3.0-beta4'
     }
 }
 
 repositories {
     mavenCentral()
-    maven {
-        url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
-    }
+    maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local' }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.+'
 
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:cardview-v7:23.2.0'
-    compile 'com.android.support:recyclerview-v7:23.2.0'
-    compile 'com.android.support:design:23.2.0'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
-    compile 'com.hannesdorfmann:adapterdelegates:1.1.1'
+    compile 'com.hannesdorfmann:adapterdelegates:1.2.0'
 
-    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
 
-    compile 'io.realm:realm-android:0.88.0-SNAPSHOT'
+    compile 'io.reactivex:rxandroid:1.2.0'
+    compile 'io.reactivex:rxjava:2.0.0-DP0-SNAPSHOT'
 
-    compile 'io.reactivex:rxandroid:1.1.0'
-    compile 'io.reactivex:rxjava:1.1.1'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
 }
 
 
